# CMake

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
include/matrix/: matrix.h
include/util/: util.h
include/vector/: vector.h
src/main/: CMakeLists.txt  driver.c  testing.c
src/main/matrix/: matrix.c
src/main/util/: util.c
src/main/vector/: vector.c
